# example_ws

./: .gitignore  Cheatsheet.txt  LICENSE  README.md  compile_xacro.py  launch_gz.bash  pkg_install.bash
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
src/robot_mover_pkg/: package.xml  setup.cfg  setup.py
src/robot_mover_pkg/launch/: robot_mover.launch.py
src/robot_mover_pkg/robot_mover_pkg/: __init__.py  move_bot.py
src/robot_spawn_pkg/: package.xml  setup.cfg  setup.py
src/robot_spawn_pkg/launch/: rviz_launcher.launch.py  spawn_ttbot.launch.py  spawn_ttbot_pose.launch.py
src/robot_spawn_pkg/robot_spawn_pkg/: __init__.py  spawn_bot.py
src/robot_spawn_pkg/rviz/: office_world.rviz
src/robot_spawn_pkg/urdf/: ttbot.gazebo  ttbot.urdf  ttbot.urdf.xacro
src/robot_spawn_pkg/worlds/: office.world
