<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_spawn_pkg</name>
  <version>1.0.0</version>
  <description>ROS 2 Pkg to spawn a 4 wheeled robot in Gazebo.</description>
  <maintainer email="hi@kshitijtiwari.com">vscode</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <buildtool_depend>urdf</buildtool_depend>
  
  <depend>urdf</depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>xacro</depend>

  <exec_depend>launch_ros</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>